# TrashPet

./: .gitignore  CITATION.cff  LICENSE  README.md  TrashPetAI_GD5_Design_v2.md  TrashPetAI_GD9_Design.md  TrashPetAI_ICEIR_Paper_Plan.md  TrashPetAI_Progress.md  TrashPetAI_Progress_v2.md  TrashPet_AI_Desktop_Assistant.md
TrashPetAI/: CMakeLists.txt  aiclient.h  build_installer.ps1  characterstate.h  characterwidget.cpp  characterwidget.h  chatwidget.cpp  chatwidget.h  claudeclient.cpp  claudeclient.h  cleanupplan.cpp  cleanupplan.h  configmanager.cpp  configmanager.h  costume.h  eatdialog.cpp  eatdialog.h  geminiclient.cpp  geminiclient.h  healthconfig.h  healthdialog.cpp  healthdialog.h  hungerconfig.h  hungermanager.cpp  hungermanager.h  installer.iss  installer_helper.cpp  main.cpp  openaiclient.cpp  openaiclient.h  petstate.cpp  petstate.h  recyclebinmanager.cpp  recyclebinmanager.h  resource.rc  setupdialog.cpp  setupdialog.h  systemmonitor.cpp  systemmonitor.h  trashpetai_installer.sed
TrashPetAI/config/: config.example.json  pet_state.json
TrashPetAI/experiments/rabs_eval/: rabs_eval.cpp
TrashPetAI/installer_staging/config/: pet_state.json
TrashPetAI/release/assets/costumes/: CREDITS.md
